After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 649379 - Some files in libempathy-gtk use gi18n.h instead of gi18n-lib.h
Some files in libempathy-gtk use gi18n.h instead of gi18n-lib.h
Status: RESOLVED FIXED
Product: empathy
Classification: Core
Component: General
3.0.x
Other Linux
: Normal normal
: ---
Assigned To: empathy-maint
empathy-maint
Depends on:
Blocks:
 
 
Reported: 2011-05-04 14:35 UTC by Gabor Kelemen
Modified: 2011-05-05 12:14 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Replace gi18n.h with gi18n-lib.h (2.65 KB, patch)
2011-05-04 14:38 UTC, Gabor Kelemen
none Details | Review
Replace gi18n.h with gi18n-lib.h, add config.h when necessary (2.75 KB, patch)
2011-05-04 14:56 UTC, Gabor Kelemen
none Details | Review

Description Gabor Kelemen 2011-05-04 14:35:16 UTC
There are some library sources in libempathy-gtk, that include the gi18n.h header for i18n, but they should gi18n-lib.h, just like the majority of sources there. The effect is that when some program other than Empathy uses these libs, the gettext call will try to look up the strings in the other programs translation domain, and not in Empathy's. 

The result of this is visible here: https://bugs.launchpad.net/ubuntu/+source/nautilus-sendto/+bug/777064

Using gi18n-lib.h solves this, because it makes the _ macro use g_dgettext, which will look up the strings from Empathy's translation file.
Comment 1 Gabor Kelemen 2011-05-04 14:38:01 UTC
Created attachment 187197 [details] [review]
Replace gi18n.h with gi18n-lib.h
Comment 2 Gabor Kelemen 2011-05-04 14:56:53 UTC
Created attachment 187200 [details] [review]
Replace gi18n.h with gi18n-lib.h, add config.h when necessary

include config.h to avoid build breakage
Comment 3 Guillaume Desmottes 2011-05-05 12:14:31 UTC
Thx for the patch ! Merged to 2.34, 3.0 and master.

This problem has been fixed in the development version. The fix will be available in the next major software release. Thank you for your bug report.