Include gi18n-lib.h in library sources, not gi18n.h.

Fixes: https://bugzilla.gnome.org/show_bug.cgi?id=649379