libempathy-gtk/empathy-contact-blocking-dialog.c
@@ -21,8 +21,9 @@
  *
  * Authors: Danielle Madeley <danielle.madeley@collabora.co.uk>
  */
+#include "config.h"
 
-#include <glib/gi18n.h>
+#include <glib/gi18n-lib.h>
 
 #include <libempathy/empathy-utils.h>
 
